--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,16 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <!--文字サイズ　小-->
+    <dimen name="sp_s">16sp</dimen>
+    <!--文字サイズ　中-->
+    <dimen name="sp_m">20sp</dimen>
+    <!--文字サイズ　大-->
+    <dimen name="sp_l">40sp</dimen>
+    <!--余白サイズ　小-->
+    <dimen name="dp_s">4dp</dimen>
+    <!--余白サイズ　中-->
+    <dimen name="dp_m">8dp</dimen>
+    <!--余白サイズ　大-->
+    <dimen name="dp_l">16dp</dimen>
 </resources>
